--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start:dev": "webpack-dev-server",
     "build": "webpack --mode production",
     "build:dev": "webpack --mode development"
@@ -12,8 +12,11 @@
   "author": "",
   "license": "",
   "devDependencies": {
+    "@babel/plugin-transform-runtime": "^7.12.1",
+    "@babel/preset-env": "^7.12.7",
     "copy-webpack-plugin": "^6.0.3",
     "css-loader": "^4.2.1",
+    "jest": "^26.6.3",
     "style-loader": "^1.2.1",
     "svg-inline-loader": "^0.8.2",
     "vue-loader": "^15.9.3",
